--- a/agecal.css
+++ b/agecal.css
@@ -34,18 +34,8 @@
    
 }
 
-.block2 {
-    border-radius: 4px;
-    width: 300px;
-    height: 50px;    
-    background-color: rgb(204, 42, 42);
-    border-top-style: hidden;
-    border-right-style: hidden;
-    border-left-style: hidden;
-    border-bottom-style: groove;
-    color: white;
-    border-color: white;
-}
+
+
 
 .inbutton {
     padding-right: 10%;
@@ -74,4 +64,13 @@
 .hidden {
     display: none;
 
+}
+
+#lastMessage {
+    background-color: blueviolet;
+    width: 50%;
+    height: 50%;
+    border: black;
+    border-radius: 10px;
+    text-align: center;
 }
