--- a/agecal.css
+++ b/agecal.css
@@ -63,10 +63,14 @@
 }
 
 #lastMessage {
+    padding: 5%;
     background-color: rgb(204, 42, 42);
-    width: 50%;
-    height: 50%;
+    font-size: 30px;
+    width: 100%;
+    height: 100%;
     border: black;
     border-radius: 10px;
     text-align: center;
 }
+.nbotton {
+    
