--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -61,7 +61,7 @@
   display: none;
 }
 
-#lastMessage {``
+#lastMessage {
   background-color: rgb(204, 42, 42);
   font-size: 30px;
   border: black;
